# effectsong

./: .gitignore  README.md
EffectSongEditor/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.tsbuildinfo
EffectSongEditor/public/: effectsong-core.data  effectsong-core.js  effectsong-core.wasm  index.html  manifest.json  modulesetting.js
EffectSongEditor/src/: App.css  App.js  App.tsx
EffectSongEditor/src/core/: effectsong-core.d.ts
EffectSongEditor/src/editor/: CoreManager.ts  Editor.js  Editor.jsx  Editor.tsx  Util.js  Util.ts  atom.ts  common.d.ts
EffectSongEditor/src/editor/Import/: FileUpload.js  FileUpload.jsx  FileUpload.tsx  GLTFImport.js  GLTFImport.jsx  GLTFImport.tsx  MusicImport.js  MusicImport.tsx
EffectSongEditor/src/editor/LeftPanel/: HierarchyView.d.ts  HierarchyView.js  HierarchyView.jsx  HierarchyView.tsx  LeftTab.js  LeftTab.tsx  SettingsView.js  SettingsView.jsx  SettingsView.tsx
EffectSongEditor/src/editor/MusicPlayer/: MusicPlayer.js
EffectSongEditor/src/editor/RightPanel/: CameraView.js  CameraView.jsx  CameraView.tsx  LightView.js  LightView.jsx  LightView.tsx  NodeView.js  NodeView.jsx  NodeView.tsx  RightTab.js  RightTab.jsx  RightTab.tsx  SceneView.js  VisualScriptView.tsx
EffectSongEditor/src/editor/ScriptEditor/: ScriptEditor.js  ScriptEditor.jsx  ScriptEditor.tsx  ShaderActiveButton.js  ShaderSettings.js  ShaderSettings.jsx  ShaderSettings.tsx
EffectSongEditor/src/interfaces/: effectsong-core.d.ts
EffectSongRenderer/emscripten-project/: CMakeLists.txt
EffectSongRenderer/include/: ArtShader.h  ArtShader.hpp  Camera.h  DiffuseIBLTexture.h  GLTFLoader.h  IBLPrimitive.h  IBLTexture.h  Light.h  Material.h  Node.h  Primitive.h  Renderable.h  Renderer.h  Scene.h  SoundTexture.h  SpecularIBLTexture.h  Texture.h  common.h
EffectSongRenderer/project/: EffectSongRenderer.sln
EffectSongRenderer/project/EffectSongRenderer/: EffectSongRenderer.vcxproj  EffectSongRenderer.vcxproj.filters
EffectSongRenderer/project/EffectSongRenderer/x64/Debug/: EffectSongRenderer.exe.recipe  EffectSongRenderer.ilk  vc143.idb
EffectSongRenderer/project/EffectSongRenderer/x64/Debug/EffectSo.7ae42503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EffectSongRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EffectSongRenderer/res/2.0/NewFolder/: untitled.gltf
EffectSongRenderer/src/: ArtShader.cpp  Camera.cpp  GLTFLoader.cpp  IBLPrimitive.cpp  IBLTexture.cpp  Light.cpp  Material.cpp  Node.cpp  Primitive.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  SoundTexture.cpp  Texture.cpp  fragment_shader.glsl  ibl_fragment_shader.glsl  ibl_vertex_shader.glsl  main.cpp  vertex_shader.glsl
EffectSongServer/AI/: AIServer.js  AIServer.ts  claude_test.js  package-lock.json  package.json  tsconfig.json
